--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "CodeLens (Launch) - QuickSort",
+      "request": "launch",
+      "mainClass": "arithmetic.quick_sort.QuickSort",
+      "projectName": "Java"
+    },
+    {
       "name": "Python: 当前文件",
       "type": "python",
       "request": "launch",
@@ -9,18 +16,17 @@
       "console": "integratedTerminal"
     },
     {
-      //C/C++配置开始
-      "name": "C/C++", // 配置名称，将会在启动配置的下拉菜单中显示
-      "type": "cppdbg", // 配置类型，这里只能为cppdbg
-      "request": "launch", // 请求配置类型，可以为launch（启动）或attach（附加）
-      "program": "${fileDirname}//${fileBasenameNoExtension}.exe", // 将要进行调试的程序的路径
-      "args": [], // 程序调试时传递给程序的命令行参数，一般设为空即可
-      "stopAtEntry": false, // 设为true时程序将暂停在程序入口处，一般设置为false
-      "cwd": "${workspaceFolder}", // 调试程序时的工作目录，一般为${workspaceRoot}即代码所在目录 workspaceRoot已被弃用，现改为workspaceFolder
+      "name": "C/C++",
+      "type": "cppdbg",
+      "request": "launch",
+      "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+      "args": [],
+      "stopAtEntry": false,
+      "cwd": "${workspaceFolder}",
       "environment": [],
-      "externalConsole": false, // 调试时是否显示控制台窗口，一般设置为true显示控制台
+      "externalConsole": false,
       "MIMode": "gdb",
-      "miDebuggerPath": "gdb.exe", // miDebugger的路径，注意这里要与MinGw的路径对应
+      "miDebuggerPath": "gdb.exe",
       "preLaunchTask": "C/C++: gcc.exe build active file",
       "setupCommands": [
         {
@@ -29,6 +35,6 @@
           "ignoreFailures": true
         }
       ]
-    } //配置结束
+    }
   ]
 }
